@@ -4,6 +4,7 @@ Added
     Cron job to disable backup schedules for offline hosts & deleted instances
     Limit not-admin users to servers/projects
     View to view & delete hosts in settings
+    Show instance limits on instance view (#288)
 
 Changed
     Support backups & backup schedules in different projects
